test/test-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deploy-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-blue
  template:
    metadata:
      labels:
        app: deploy-blue
        slot: blue
    spec:
      containers:
        - name: blue
          image: nginx:stable
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          # This (and the volumes section below) mount the config map as a volume.
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: wwwdata-volume
      volumes:
        - name: wwwdata-volume
          configMap:
            name: blue-green-configmap
