test/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-prod
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: deploy-blue
